[gd_scene load_steps=33 format=3 uid="uid://2cpgksqbq3uy"]

[ext_resource type="Script" uid="uid://ddml1oldxxlp1" path="res://TKMapper.gd" id="1_s3pl7"]
[ext_resource type="Script" uid="uid://4ae0lhk0pdc8" path="res://Resources/Camera.gd" id="2_sv5qs"]
[ext_resource type="Texture2D" uid="uid://cjx5jwbksxcbl" path="res://Images/file.svg" id="3_pqjdy"]
[ext_resource type="Texture2D" uid="uid://5a5a57bdge15" path="res://Images/file-dark.svg" id="4_kglqp"]
[ext_resource type="Texture2D" uid="uid://d2dygu43fg8wv" path="res://Images/file-bright.svg" id="4_olfhn"]
[ext_resource type="Texture2D" uid="uid://bil612dgq6i7f" path="res://Images/save.svg" id="4_u1d22"]
[ext_resource type="Texture2D" uid="uid://bnydi5rl8y6v" path="res://Images/save-dark.svg" id="6_hasb6"]
[ext_resource type="Texture2D" uid="uid://cqfwjpblq0lj2" path="res://Images/save-bright.svg" id="7_7rivj"]
[ext_resource type="Texture2D" uid="uid://ddxfqyu6u25u6" path="res://Images/chevron-left.svg" id="7_a5a15"]
[ext_resource type="Texture2D" uid="uid://dmlmcm2t875ws" path="res://Images/chevron-right.svg" id="8_28ygm"]
[ext_resource type="Texture2D" uid="uid://bq83qdfja8pbv" path="res://Images/extension.svg" id="9_i8s3w"]
[ext_resource type="Texture2D" uid="uid://bwr4hwsqy2ihv" path="res://Images/contrast-bright.svg" id="9_w4jf0"]
[ext_resource type="Texture2D" uid="uid://beiim317pt5n3" path="res://Images/extension-bright.svg" id="10_644m5"]
[ext_resource type="Texture2D" uid="uid://b7flwd0w6l7w2" path="res://Images/contrast.svg" id="10_fdsbv"]
[ext_resource type="Texture2D" uid="uid://bv8i7w1hdt4yw" path="res://Images/contrast-dark.svg" id="11_dcm3f"]
[ext_resource type="Texture2D" uid="uid://bij64bl5s52tn" path="res://Images/eye.svg" id="11_s3tua"]
[ext_resource type="Texture2D" uid="uid://gfjau7f1n4tn" path="res://Images/extension-dark.svg" id="11_sjp7p"]
[ext_resource type="Texture2D" uid="uid://ckp0u5mhcq8tm" path="res://Images/eye-dark.svg" id="12_daljj"]
[ext_resource type="Texture2D" uid="uid://ctn56wqdmwflh" path="res://Images/chevron-left-dark.svg" id="12_vdrt2"]
[ext_resource type="Texture2D" uid="uid://b1uc2p7vv83ua" path="res://Images/chevron-right-dark.svg" id="14_jligr"]
[ext_resource type="Texture2D" uid="uid://cun5n4kks6otw" path="res://Images/undo.svg" id="15_2a4ub"]
[ext_resource type="Texture2D" uid="uid://ckkbvio08bt3l" path="res://Images/placeholder.svg" id="15_vk3jw"]
[ext_resource type="Texture2D" uid="uid://vvmhridv7mbl" path="res://Images/undo-dark.svg" id="16_4k3qj"]
[ext_resource type="Texture2D" uid="uid://bll0ivhw1pahu" path="res://Images/eye-bright.svg" id="16_ggb22"]
[ext_resource type="Texture2D" uid="uid://bx71a4w4ysotm" path="res://Images/placeholder-bright.svg" id="16_o2vu3"]
[ext_resource type="Texture2D" uid="uid://b2hxk0rnam5ey" path="res://Images/placeholder-dark.svg" id="17_7d3bf"]
[ext_resource type="Texture2D" uid="uid://dtenejynopc0c" path="res://Images/chevron-left-bright.svg" id="19_1cfy8"]
[ext_resource type="Texture2D" uid="uid://b4i4nao3mm0nw" path="res://Images/chevron-right-bright.svg" id="22_c3cgk"]
[ext_resource type="Texture2D" uid="uid://ca2vvrhuuunx3" path="res://Images/settings.svg" id="24_u1l8f"]
[ext_resource type="Texture2D" uid="uid://bw4ijvrprwbpt" path="res://Images/undo-bright.svg" id="25_hk2co"]
[ext_resource type="Texture2D" uid="uid://c6qjnn8ubwgen" path="res://Images/settings-bright.svg" id="25_sij56"]
[ext_resource type="Texture2D" uid="uid://c2bppf7m6bi2u" path="res://Images/settings-dark.svg" id="26_rij7b"]

[node name="TKMapper" type="Node2D"]
script = ExtResource("1_s3pl7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 383)
script = ExtResource("2_sv5qs")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="Objects" type="Node2D" parent="."]
z_index = 2

[node name="Unpassables" type="Node2D" parent="."]
z_index = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="CanvasLayer/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -11.5
offset_right = 72.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "TKMapper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileDialog" type="FileDialog" parent="CanvasLayer/Title"]
size = Vector2i(303, 180)

[node name="LoadMap" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 1.0
offset_top = 5.0
offset_right = 34.0
offset_bottom = 40.0
texture_normal = ExtResource("3_pqjdy")
texture_pressed = ExtResource("3_pqjdy")
texture_hover = ExtResource("4_olfhn")
texture_disabled = ExtResource("4_kglqp")

[node name="SaveMap" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 35.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 40.0
texture_normal = ExtResource("4_u1d22")
texture_pressed = ExtResource("4_u1d22")
texture_hover = ExtResource("7_7rivj")
texture_disabled = ExtResource("6_hasb6")

[node name="TileMode" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 91.0
offset_top = 5.0
offset_right = 126.0
offset_bottom = 40.0
texture_normal = ExtResource("9_w4jf0")
texture_pressed = ExtResource("10_fdsbv")
texture_hover = ExtResource("9_w4jf0")
texture_disabled = ExtResource("11_dcm3f")

[node name="ObjectMode" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 126.0
offset_top = 5.0
offset_right = 161.0
offset_bottom = 40.0
texture_normal = ExtResource("11_sjp7p")
texture_pressed = ExtResource("9_i8s3w")
texture_hover = ExtResource("10_644m5")
texture_disabled = ExtResource("11_sjp7p")

[node name="UnpassableMode" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 160.0
offset_top = 5.0
offset_right = 195.0
offset_bottom = 40.0
texture_normal = ExtResource("17_7d3bf")
texture_pressed = ExtResource("15_vk3jw")
texture_hover = ExtResource("16_o2vu3")
texture_disabled = ExtResource("17_7d3bf")

[node name="HideObjects" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 217.0
offset_top = 5.0
offset_right = 252.0
offset_bottom = 40.0
texture_normal = ExtResource("11_s3tua")
texture_pressed = ExtResource("11_s3tua")
texture_hover = ExtResource("16_ggb22")
texture_disabled = ExtResource("12_daljj")

[node name="Undo" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 0
offset_left = 251.0
offset_top = 5.0
offset_right = 286.0
offset_bottom = 40.0
texture_normal = ExtResource("15_2a4ub")
texture_pressed = ExtResource("15_2a4ub")
texture_hover = ExtResource("25_hk2co")
texture_disabled = ExtResource("16_4k3qj")

[node name="Settings" type="TextureButton" parent="CanvasLayer/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = 40.0
texture_normal = ExtResource("24_u1l8f")
texture_pressed = ExtResource("24_u1l8f")
texture_hover = ExtResource("25_sij56")
texture_disabled = ExtResource("26_rij7b")

[node name="ObjectSelectionBackground" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -527.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ObjectSelectionBackground"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.073
anchor_right = 1.0
anchor_bottom = 1.073
offset_top = -526.843
offset_bottom = -35.843
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ObjectSelectionBackground/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme_override_constants/separation = 2
alignment = 2

[node name="TileSelectionBackground" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -334.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/TileSelectionBackground"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.121
anchor_right = 1.0
anchor_bottom = 1.121
offset_top = -330.937
offset_bottom = -35.937
grow_horizontal = 2
grow_vertical = 0

[node name="Container" type="HFlowContainer" parent="CanvasLayer/TileSelectionBackground/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1

[node name="StatusBar" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="StatusLabel" type="Label" parent="CanvasLayer/StatusBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -31.0
offset_right = 448.0
offset_bottom = -8.0

[node name="PageInfoLabel" type="Label" parent="CanvasLayer/StatusBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -546.0
offset_top = -31.0
offset_right = -106.0
offset_bottom = -8.0
horizontal_alignment = 2

[node name="HidePanel" type="TextureButton" parent="CanvasLayer/StatusBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -36.0
offset_right = -68.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("11_s3tua")
texture_pressed = ExtResource("11_s3tua")
texture_hover = ExtResource("16_ggb22")
texture_disabled = ExtResource("12_daljj")

[node name="PreviousTile" type="TextureButton" parent="CanvasLayer/StatusBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -35.0
offset_right = -35.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_a5a15")
texture_pressed = ExtResource("7_a5a15")
texture_hover = ExtResource("19_1cfy8")
texture_disabled = ExtResource("12_vdrt2")

[node name="NextTile" type="TextureButton" parent="CanvasLayer/StatusBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -35.0
texture_normal = ExtResource("8_28ygm")
texture_pressed = ExtResource("8_28ygm")
texture_hover = ExtResource("22_c3cgk")
texture_disabled = ExtResource("14_jligr")

[node name="TargetBox" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Top" type="ColorRect" parent="TargetBox"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 1.0
color = Color(0, 1, 1, 1)

[node name="Right" type="ColorRect" parent="TargetBox"]
layout_mode = 0
offset_left = 47.0
offset_top = 1.0
offset_right = 48.0
offset_bottom = 47.0
color = Color(0, 1, 1, 1)

[node name="Bottom" type="ColorRect" parent="TargetBox"]
layout_mode = 0
offset_top = 47.0
offset_right = 48.0
offset_bottom = 48.0
color = Color(0, 1, 1, 1)

[node name="Left" type="ColorRect" parent="TargetBox"]
layout_mode = 0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 47.0
color = Color(0, 1, 1, 1)

[connection signal="canceled" from="CanvasLayer/Title/FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="file_selected" from="CanvasLayer/Title/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/Title/LoadMap" to="." method="_on_load_map_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/SaveMap" to="." method="_on_save_map_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/TileMode" to="." method="_on_tile_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/ObjectMode" to="." method="_on_object_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/UnpassableMode" to="." method="_on_unpassable_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/HideObjects" to="." method="_on_hide_objects_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="CanvasLayer/Title/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/StatusBar/HidePanel" to="." method="_on_hide_panel_pressed"]
[connection signal="pressed" from="CanvasLayer/StatusBar/PreviousTile" to="." method="_on_previous_tile_pressed"]
[connection signal="pressed" from="CanvasLayer/StatusBar/NextTile" to="." method="_on_next_tile_pressed"]
